# taibun

./: LICENSE  README-cmn.md  README-oan.md  README.md  pyproject.toml  setup.cfg  setup.py  taibun.py  test.py
.github/ISSUE_TEMPLATE/: bug_report.md  new-feature.md
.github/workflows/: ci.yaml
data/: simplified.csv  words.json
readme/: README-cmn.md  README-oan.md
taibun/: __init__.py  taibun.py
taibun/data/: prons.msgpack  simplified.json  simplified.msgpack  traditional.json  traditional.msgpack  vars.json  vars.msgpack  words.json  words.msgpack  zhuyin.json
tests/: TestsZhuyin.csv  generate_test.py  test_additional.py  test_apostrophe.py  test_conversion.py  test_convert_non_cjk.py  test_delimiter.py  test_format.py  test_ipa_conversion.py  test_output_tokens.py  test_pingyim_conversion.py  test_poj_conversion.py  test_punctuation.py  test_sandhi.py  test_singapore.py  test_tailo_conversion.py  test_tlpa_conversion.py  test_tokenisation.py  test_tongiong_conversion.py  test_zhuyin.json  test_zhuyin_conversion.py  ting.csv  utils.py
