[metadata]
name = taibun
version = 1.1.0
author = Andrei Harbachov
author_email = andrei.harbachov@gmail.com
description = Taiwanese Hokkien Transliterator and Tokeniser
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/andreihar/taibun
license = MIT
classifiers =
    Topic :: Text Processing :: Linguistic
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Operating System :: Unix
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
keywords = python, taiwan, taiwanese, taigi, hokkien, romanization, transliteration, transliterator, tokenization, tokenizer

[options]
python_requires = >=3.8
packages = find:

[options.package_data]
taibun = data/*.json